--- a/index.html
+++ b/index.html
@@ -2,41 +2,71 @@
 <html lang="en">
 	<head>
     		<meta charset="utf-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1">
+    		<link rel="icon" href="favicon.ico">
+    		<title>Create a postcard</title>
 		<script src="http://webrtc.github.io/adapter/adapter-latest.js"></script>
-		<script src="js/capture.js"></script>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 		<link rel="stylesheet" href="css/main.css">
   	</head>
   	<body>
-		<div id="output">
-			<p> output
-		</div>
-		<video id="video"></video>
-	  	<input  class="button black" id="capture" type="button" value="Open Webcam" onclick="webcamClick()" />	
-    		<input id="imageUpload" type="file" name="photo" accept="image/*" placeholder="Photo" required="" onchange="changeImage(this)"/> 
-		<canvas id="canvas" width="578" height="400"></canvas>
-		<form id="form" enctype="multipart/form-data" name="form">	
-			<div class="form-group">
-				<label for="senderEmail">Your Email Address</label>
-				<input type="email" class="form-control" id="senderEmail" name="senderEmail" aria-describedby="emailHelp" placeholder="Enter your email" required>
+		<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+  			<a class="navbar-brand" href="index.html">Create a Postcard</a>
+			<ul class="navbar-nav">
+    				<li class="nav-item active">
+      					<a class="nav-link" href="index.html">Home</a>
+    				</li>
+  			</ul>
+		</nav> 
+		
+    		<div class="container">
+			<div class="image-set">
+				<video id="video"></video>
+				<input  class="button black" id="capture" type="button" value="Open Webcam" onclick="webcamClick()" />	
+				<input id="imageUpload" type="file" name="photo" accept="image/*" placeholder="Photo" required onchange="changeImage(this)"/> 
 			</div>
-			<div class="form-group">
-				<label for="receiverEmail">Recipient's Email Address</label>
-				<input type="email" class="form-control" id="receiverEmail" name="receiverEmail" paria-describedby="emailHelp" placeholder="Enter recipient's email" required>
-			</div>
-			<button type="submit" class="btn btn-primary">Send</button>
-		</form>        
+			<canvas id="canvas"></canvas>
+			<label for="color-input" id="color-label" style="background-color: red"></label>
+			<input type="checkbox" id="color-input" checked></input>
+		
 
-    <script>
-      var canvas = document.getElementById('canvas');
-      var context = canvas.getContext('2d');
-	var video = document.getElementById('video');
-	var output = document.getElementById('output');
-	var form = document.getElementById('form');
-    	form.addEventListener('submit', function(event) {
-		event.preventDefault();
-		submitPostcard();
-	});
+			<div id="color-picker">
+			  <canvas id="color-block" height="150" width="150"></canvas>
+			  <canvas id="color-strip" height="150" width="30"></canvas>
+			</div>
+			<input type="text" id="message"><br>
+			<input type="number" id="fontSize" value="20"><br>
+			<div id="controllers">
+  				<button type="button" class="controller" id="undo" >undo</span>  
+  				<button type="button" class="controller" id="redo" >redo</span>
+			</div>
+			<form id="form" enctype="multipart/form-data" name="form">	
+				<div class="form-group">
+					<label for="senderEmail">Your Email Address</label>
+					<input type="email" class="form-control" id="senderEmail" name="senderEmail" aria-describedby="emailHelp" placeholder="Enter your email" required>
+				</div>
+				<div class="form-group">
+					<label for="receiverEmail">Recipient's Email Address</label>
+					<input type="email" class="form-control" id="receiverEmail" name="receiverEmail" paria-describedby="emailHelp" placeholder="Enter recipient's email" required>
+				</div>
+				<button type="submit" class="btn btn-primary">Send</button>
+			</form>       
+			<div id="output">
+				<p> output
+			</div>
+		</div> 
+	<script>
+      		var canvas = document.getElementById('canvas');
+      		var context = canvas.getContext('2d');
+		var video = document.getElementById('video');
+		var output = document.getElementById('output');
+		var form = document.getElementById('form');
+		form.addEventListener('submit', function(event) {
+			event.preventDefault();
+			submitPostcard();
+		});
 	function changeImage(image)
 	{
 		var reader = new FileReader();
@@ -47,10 +77,8 @@
       			imageObj.onload = function() 
 			{
 				context.clearRect(0,0,canvas.width,canvas.height);
-        			context.drawImage(imageObj, 69, 50);
-				context.font = "bold 16px Arial";
-      				context.fillText("Zibri", (canvas.width / 2) - 17, (canvas.height / 2) + 8);
-
+        			context.drawImage(imageObj, 0, 0);
+				cPush();
 			};
 			imageObj.src = reader.result;
       		};
@@ -70,7 +98,7 @@
 			output.innerHTML = "No image was submitted" + "<p>";
 			return;
 		}
-		var image = canvas.toDataURL("image/jpeg");
+		var image = canvas.toDataURL();
 		var formData = new FormData(form);
 		formData.append('image',image);
 		sendRequest(formData);	
@@ -78,14 +106,12 @@
 	function handleResponse(response)
 	{
 		var text = JSON.parse(response);
-		console.log(text);
 		output.innerHTML = text+"<p>";
 	}
 	function sendRequest(dataRequest)
 	{
 		var request = new XMLHttpRequest();
 		request.open("POST","request.php",true);
-		//request.setRequestHeader("Content-Type","application/json");
 		request.onreadystatechange= function ()
 		{
 			if ((this.readyState == 4)&&(this.status == 200))
@@ -99,8 +125,23 @@
 		}
 		request.send(dataRequest);
 	}
+	canvas.addEventListener("mousedown", addText, false);
+	function addText(e)
+	{
+  		var x = e.offsetX;
+  		var y = e.offsetY;
+		var message = document.getElementById("message").value;
+		var fontSize = document.getElementById("fontSize").value;
+		context.font = fontSize + "px Arial";
+		context.fillStyle = rgbaColor; 
+      		context.fillText(message, x, y);
+		cPush();
+	}
 	
 	
-    </script>
+   	</script>
+	<script src="js/colorPicker.js"></script>
+	<script src="js/undoRedo.js"></script>
+	<script src="js/capture.js"></script>
   </body>
 </html>      
