--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
 		<link rel="stylesheet" href="css/main.css">
   	</head>
   	<body>
@@ -28,14 +30,13 @@
 				<input id="imageUpload" type="file" name="photo" accept="image/*" placeholder="Photo" required onchange="changeImage(this)"/> 
 			</div>
 			<canvas id="canvas"></canvas>
-			<label for="color-input" id="color-label" style="background-color: red"></label>
-			<input type="checkbox" id="color-input" checked></input>
-		
+			<input id='colorpicker' />
+			<script>
+				$("#colorpicker").spectrum({
+    					color: "#f00"
+				});
+			</script>
 
-			<div id="color-picker">
-			  <canvas id="color-block" height="150" width="150"></canvas>
-			  <canvas id="color-strip" height="150" width="30"></canvas>
-			</div>
 			<input type="text" id="message"><br>
 			<input type="number" id="fontSize" value="20"><br>
 			<div id="controllers">
@@ -63,85 +64,88 @@
 		var video = document.getElementById('video');
 		var output = document.getElementById('output');
 		var form = document.getElementById('form');
+		var colorPicker = document.getElementById('colorpicker');
 		form.addEventListener('submit', function(event) {
 			event.preventDefault();
 			submitPostcard();
 		});
-	function changeImage(image)
-	{
-		var reader = new FileReader();
-      		reader.onload = function(e) 
+		function changeImage(image)
 		{
-			var img = document.getElementById('img');
-      			var imageObj = new Image();
-      			imageObj.onload = function() 
+			var reader = new FileReader();
+			reader.onload = function(e) 
 			{
-				context.clearRect(0,0,canvas.width,canvas.height);
-        			context.drawImage(imageObj, 0, 0);
-				cPush();
+				var img = document.getElementById('img');
+				var imageObj = new Image();
+				imageObj.onload = function() 
+				{
+					context.clearRect(0,0,canvas.width,canvas.height);
+					context.drawImage(imageObj, 0, 0);
+					cPush();
+				};
+				imageObj.src = reader.result;
 			};
-			imageObj.src = reader.result;
-      		};
-        	reader.readAsDataURL(image.files[0]);
-	}
-	function isCanvasBlank() 
-	{
-    		const blank = document.createElement('canvas');
-    		blank.width = canvas.width;
-    		blank.height = canvas.height;
-		return canvas.toDataURL() == blank.toDataURL();
-	}
-	function submitPostcard()
-	{
-		if(isCanvasBlank())
-		{
-			output.innerHTML = "No image was submitted" + "<p>";
-			return;
+			reader.readAsDataURL(image.files[0]);
 		}
-		var image = canvas.toDataURL();
-		var formData = new FormData(form);
-		formData.append('image',image);
-		sendRequest(formData);	
-	}
-	function handleResponse(response)
-	{
-		var text = JSON.parse(response);
-		output.innerHTML = text+"<p>";
-	}
-	function sendRequest(dataRequest)
-	{
-		var request = new XMLHttpRequest();
-		request.open("POST","request.php",true);
-		request.onreadystatechange= function ()
+		function isCanvasBlank() 
 		{
-			if ((this.readyState == 4)&&(this.status == 200))
-			{
-				handleResponse(this.responseText);
-			}	
-			else
-			{
-				output.innerhtml = "Error occurred while trying to send request, " + this.status;
-			}	
+			const blank = document.createElement('canvas');
+			blank.width = canvas.width;
+			blank.height = canvas.height;
+			return canvas.toDataURL() == blank.toDataURL();
 		}
-		request.send(dataRequest);
-	}
-	canvas.addEventListener("mousedown", addText, false);
-	function addText(e)
-	{
-  		var x = e.offsetX;
-  		var y = e.offsetY;
-		var message = document.getElementById("message").value;
-		var fontSize = document.getElementById("fontSize").value;
-		context.font = fontSize + "px Arial";
-		context.fillStyle = rgbaColor; 
-      		context.fillText(message, x, y);
-		cPush();
-	}
-	
-	
-   	</script>
-	<script src="js/colorPicker.js"></script>
-	<script src="js/undoRedo.js"></script>
-	<script src="js/capture.js"></script>
+		function submitPostcard()
+		{
+			if(isCanvasBlank())
+			{
+				output.innerHTML = "No image was submitted" + "<p>";
+				return;
+			}
+			var image = canvas.toDataURL();
+			var formData = new FormData(form);
+			formData.append('image',image);
+			sendRequest(formData);	
+		}
+		function handleResponse(response)
+		{
+			var text = JSON.parse(response);
+			output.innerHTML = text+"<p>";
+		}
+		function sendRequest(dataRequest)
+		{
+			var request = new XMLHttpRequest();
+			request.open("POST","request.php",true);
+			request.onreadystatechange= function ()
+			{
+				if ((this.readyState == 4)&&(this.status == 200))
+				{
+					handleResponse(this.responseText);
+				}	
+				else
+				{
+					output.innerhtml = "Error occurred while trying to send request, " + this.status;
+				}	
+			}
+			request.send(dataRequest);
+		}
+		canvas.addEventListener("mousedown", addText, false);
+		function addText(e)
+		{
+			var x = e.offsetX;
+			var y = e.offsetY;
+			var message = document.getElementById("message").value;
+			var fontSize = document.getElementById("fontSize").value;
+			context.font = fontSize + "px Arial";
+			var color = $("#colorpicker").spectrum("get");
+			console.log(color.toRgbString());
+			context.fillStyle = color.toHexString();
+			console.log(context.fillStyle);
+			context.fillText(message, x, y);
+			cPush();
+		}
+		
+		
+		</script>
+		<script src="js/undoRedo.js"></script>
+		<script src="js/capture.js"></script>
   </body>
 </html>      
