--- a/index.html
+++ b/index.html
@@ -24,39 +24,85 @@
 		</nav> 
 		
     		<div class="container">
-			<div class="image-set">
-				<video id="video"></video>
-				<input  class="button black" id="capture" type="button" value="Open Webcam" onclick="webcamClick()" />	
-				<input id="imageUpload" type="file" name="photo" accept="image/*" placeholder="Photo" required onchange="changeImage(this)"/> 
+			<div class ="row mt-3 ">
+				<h2>Upload and customize an image and then email it to a friend!</h2>
 			</div>
-			<canvas id="canvas"></canvas>
-			<input id='colorpicker' />
-			<script>
-				$("#colorpicker").spectrum({
-    					color: "#f00"
-				});
-			</script>
-
-			<input type="text" id="message"><br>
-			<input type="number" id="fontSize" value="20"><br>
-			<div id="controllers">
-  				<button type="button" class="controller" id="undo" >undo</span>  
-  				<button type="button" class="controller" id="redo" >redo</span>
+			<div class ="row mt-3 justify-content-center">
+				<h5>Drop an image or use a webcam</h5>
+			</div>
+			<div class = "row mt-3">
+				<div class="col-lg-6">
+					<div class="box" id="imageUpload" name="imageUpload">
+						<div class="box__input">
+							<svg class="box__icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43"><path d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"/></svg>
+							<input class="box__file" type="file" name="photo" id="file" accept="image/*"/>
+							<label for="file"><strong>Choose a file</strong><span class="box__dragndrop"> or drag it here</span>.</label>
+						</div>
+						<div class="box__uploading">Uploading&hellip;</div>
+						<div class="box__success">Done!</div>
+						<div class="box__error">Error! <span></span>.</div>
+					</div>
+				</div>
+				<div class="col-lg-6">
+					<div class="content" id="content">
+						<video id="video"></video>	
+					</div>
+				</div>
+			</div>
+			<div class="row mt-1">
+				<div class ="col-lg-10 text-right">
+					<input  class="button black" id="capture" type="button" value="Open Webcam" onclick="webcamClick()" />	
+				</div>
+			</div>
+			<div class ="row mt-3 justify-content-center">
+				<h5>Customize the image with the tools below by adding a message to the text box and clicking on the canvas</h5>
+			</div>
+			<div class="row mt-3 justify-content-center">
+					<canvas id="canvas"></canvas>
+			</div>
+			<div class="row mt-3 justify-content-center">
+				<label for="message"><strong>Message</strong></label>
+				<input type="text" id="message"/>
+				<label for="fontSize"><strong>Font Size</strong></label>
+				<input type="number" id="fontSize" value="20"/>
+				<label for="colorpicker"><strong>Color</strong></label>
+				<input id='colorpicker'/>
+				<div id="controllers">
+					<input type="button" class="button black" id="undo" value="undo"/>  
+					<input type="button" class="button black" id="redo" value="redo"/>
+				</div>
+			</div>
+			<div class ="row mt-3">
+				<h5>Fill out the following fields and hit send.</h5>
 			</div>
 			<form id="form" enctype="multipart/form-data" name="form">	
-				<div class="form-group">
-					<label for="senderEmail">Your Email Address</label>
-					<input type="email" class="form-control" id="senderEmail" name="senderEmail" aria-describedby="emailHelp" placeholder="Enter your email" required>
+				<div class="row mt-3">
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="senderEmail">Your Email Address</label>
+							<input type="email" class="form-control" id="senderEmail" name="senderEmail" aria-describedby="emailHelp" placeholder="Enter your email" required>
+						</div>
+					</div>
 				</div>
-				<div class="form-group">
-					<label for="receiverEmail">Recipient's Email Address</label>
-					<input type="email" class="form-control" id="receiverEmail" name="receiverEmail" paria-describedby="emailHelp" placeholder="Enter recipient's email" required>
+				<div class="row mt-1">
+					<div class="col-md-6">
+						<div class="form-group">
+							<label for="receiverEmail">Recipient's Email Address</label>
+							<input type="email" class="form-control" id="receiverEmail" name="receiverEmail" paria-describedby="emailHelp" placeholder="Enter recipient's email" required>
+						</div>
+					</div>
 				</div>
-				<button type="submit" class="btn btn-primary">Send</button>
-			</form>       
-			<div id="output">
-				<p> output
-			</div>
+				<div class="row mt-3">
+					<div class="col-md-2">
+						<button type="submit" class="btn btn-primary btn-lg">Send</button>
+					</div>
+					<div class="col-md-6">
+						<div id="output">
+						</div>
+					</div>
+				</div>
+			</form>   
+			</div>    
 		</div> 
 	<script>
       		var canvas = document.getElementById('canvas');
@@ -65,6 +111,9 @@
 		var output = document.getElementById('output');
 		var form = document.getElementById('form');
 		var colorPicker = document.getElementById('colorpicker');
+		$("#colorpicker").spectrum({
+			color: "#f00"
+		});
 		form.addEventListener('submit', function(event) {
 			event.preventDefault();
 			submitPostcard();
@@ -78,8 +127,19 @@
 				var imageObj = new Image();
 				imageObj.onload = function() 
 				{
+					if(imageObj.height > window.innerHeight*.75) 
+					{
+						imageObj.height = window.innerHeight*.75;
+					}
+					if(imageObj.width > window.innerWidth*.75)
+					{
+						imageObj.width = window.innerWidth*.75;
+					}
+					canvas.width = imageObj.width;
+					canvas.height = imageObj.height;
 					context.clearRect(0,0,canvas.width,canvas.height);
-					context.drawImage(imageObj, 0, 0);
+					context.drawImage(imageObj, 0, 0, imageObj.width, imageObj.height);
+					cClear();
 					cPush();
 				};
 				imageObj.src = reader.result;
@@ -136,9 +196,7 @@
 			var fontSize = document.getElementById("fontSize").value;
 			context.font = fontSize + "px Arial";
 			var color = $("#colorpicker").spectrum("get");
-			console.log(color.toRgbString());
 			context.fillStyle = color.toHexString();
-			console.log(context.fillStyle);
 			context.fillText(message, x, y);
 			cPush();
 		}
@@ -147,5 +205,6 @@
 		</script>
 		<script src="js/undoRedo.js"></script>
 		<script src="js/capture.js"></script>
+		<script src="js/fileUpload.js"></script>
   </body>
 </html>      
